[workspace]
resolver = "3"
members = [
    "src/harness",
    "src/experiments/cache-exploration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZekeWeng/TwinSystems"

[workspace.dependencies]
harness = { path = "src/harness" }

[workspace.lints.rust]
impl_trait_overcaptures = "warn"
missing_unsafe_on_extern = "deny"
unsafe_attr_outside_unsafe = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_into_iter_loop = "warn"
let_and_return = "allow"
redundant_clone = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
try_err = "warn"
uninlined_format_args = "allow"
unused_async = "warn"
